force-app/main/default/objects/Picklist_Table__c/Picklist_Table__c.object-meta.xml
<CustomObject>
    <label>Picklist Table</label>
    <nameField>
        <label>SAP Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>