force-app/main/default/objects/Picklist_Table__c/fields/Combine__c.field-meta.xml
<CustomField>
    <fullName>Combine__c</fullName>
    <formula>Code__c &amp;&apos; - &apos;&amp;  Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combine</label>
    <type>Text</type>
</CustomField>