force-app/main/default/objects/Picklist_Table__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>