force-app/main/default/objects/Picklist_Table__c/fields/Salesforce_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_Name__c</fullName>
    <label>Salesforce Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>