force-app/main/default/objects/Picklist_Table__c/fields/SAP_Field_API__c.field-meta.xml
<CustomField>
    <fullName>SAP_Field_API__c</fullName>
    <label>SAP Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>