force-app/main/default/objects/Picklist_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAP_Field_API__c</columns>
    <columns>Code__c</columns>
    <columns>Desc__c</columns>
    <columns>Combine__c</columns>
    <columns>Salesforce_Field_Name__c</columns>
    <columns>Salesforce_Field_API__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>